[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "asqav"
version = "0.2.7"
description = "Quantum-safe control for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Asqav", email = "hello@asqav.com" }
]
keywords = [
    "ai",
    "agents",
    "control",
    "cryptography",
    "ml-dsa",
    "post-quantum",
    "identity",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
cli = ["typer>=0.12.0", "httpx>=0.24.0"]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.41.0"]
litellm = ["litellm>=1.0.0"]
haystack = ["haystack-ai>=2.0.0"]
openai-agents = ["openai-agents>=0.1.0"]
all = [
    "httpx>=0.24.0",
    "typer>=0.12.0",
    "langchain-core>=0.2.0",
    "crewai>=0.41.0",
    "litellm>=1.0.0",
    "haystack-ai>=2.0.0",
    "openai-agents>=0.1.0",
]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0", "mypy>=1.10.0"]

[project.scripts]
asqav = "asqav.cli:app"

[project.urls]
Homepage = "https://asqav.com"
Documentation = "https://asqav.com/docs"
Repository = "https://github.com/jagmarques/asqav-sdk"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/asqav"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
